--- a/layouts/about/about.html
+++ b/layouts/about/about.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>Home</h1>
-    {{ .Params.description }}
-    {{.Content}}
+    <h1>The About h1 tag</h1>
+{{ .Params.mydate }}
+{{.Content}}
+
 </body>
 </html>
