--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{.Site.BaseURL}}css/styles.css">
 
-    {{ with .Title }}<title>{{ . | title }}</title>{{ end }} {{ with .Site.Params.metadescription }}<meta name="description" content="{{ . }}">{{ end }} {{ with .Site.Params.keywords }}<meta name="keywords" content="{{ . }}">{{ end }}
+    {{ with .Title }}<title>{{ . | title }}</title>{{ end }} {{ with .Params.metadescription }}<meta name="description" content="{{ . }}">{{ end }} {{ with .Site.Params.keywords }}<meta name="keywords" content="{{ . }}">{{ end }}
 
     <title>the header</title>
 </head>
